--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,5 +21,18 @@
 }
 
 .nav-link {
-  margin: 0 12px;
+  display: inline-block;
+  color: white;
+  margin: 0 16px;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.nav-link:hover {
+  transform: scale(1.3);
+  color: deepskyblue;
+}
+
+.nav-link:active {
+  color: blueviolet;
 }
