--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -25,11 +25,12 @@
   color: white;
   margin: 0 16px;
   text-decoration: none;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, filter 0.3s;
 }
 
 .nav-link:hover {
   transform: scale(1.3);
+  filter: drop-shadow(0 0 0.4em white);
   color: deepskyblue;
 }
 
