--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,18 +9,18 @@
   box-sizing: border-box;
 }
 
-.name-tag {
+.nav-header p {
   font-size: 1.5rem;
 }
 
-.nav-list {
+.nav-header ul {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.nav-link {
+.nav-header a {
   display: inline-block;
   color: white;
   margin: 0 16px;
@@ -28,12 +28,12 @@
   transition: transform 0.3s ease, filter 0.3s;
 }
 
-.nav-link:hover {
+.nav-header a:hover {
   transform: scale(1.3);
   filter: drop-shadow(0 0 0.4em white);
   color: deepskyblue;
 }
 
-.nav-link:active {
+.nav-header a:active {
   color: blueviolet;
 }
