--- a/src/components/TechStack.css
+++ b/src/components/TechStack.css
@@ -8,9 +8,16 @@
   box-sizing: border-box;
 }
 
-.tech-stack__icon {
+.tech-stack__icon-container {
   width: 150px;
   height: 150px;
+  position: relative;
+  display: inline-block;
+}
+
+.tech-stack__icon {
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   padding: 15px;
   transition: transform 0.3s ease, filter 0.3s;
@@ -20,12 +27,12 @@
   animation: logo-spin infinite 20s linear;
 }
 
-.tech-stack__icon:hover {
+.tech-stack__icon-container:hover .tech-stack__icon {
   transform: scale(0.8);
   filter: drop-shadow(0 0 2em rebeccapurple) blur(3px);
 }
 
-.tech-stack__icon:nth-of-type(8):hover {
+.tech-stack__icon-container:nth-of-type(8):hover .tech-stack__icon {
   transform: scale(0.8) rotate(0deg);
 }
 
@@ -38,4 +45,19 @@
   }
 }
 
+.tech-stack__text {
+  position: absolute;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transform-origin: center;
+  pointer-events: none;
+  font-weight: bold;
+  transition: transform 0.3s ease;
+}
 
+.tech-stack__icon-container:hover .tech-stack__text {
+  transform: translate(-50%, -50%) scale(1.5);
+  filter: drop-shadow(0 0 0.2em black) drop-shadow(0 0 0.2em black) drop-shadow(0 0 0.2em black);
+}
