--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100px;
   max-width: 1000px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
