--- a/src/components/TechStack.css
+++ b/src/components/TechStack.css
@@ -38,13 +38,40 @@
   box-sizing: border-box;
   padding: 15px;
   transition: transform 0.3s ease, filter 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tech-stack__icon-tool {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 15px;
+  transition: transform 0.3s ease, filter 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tech-stack__icon-tool img {
+  margin: auto;
+  max-width: 100px;
+  max-height: 100px;
 }
 
 .tech-stack__icon-wrapper {
+  width: 100%;
+  height: 100%;
   animation: logo-spin infinite 20s linear;
 }
 
 .tech-stack__icon-container:hover .tech-stack__icon {
+  transform: scale(0.8);
+  filter: drop-shadow(0 0 2em rebeccapurple) blur(3px);
+}
+
+.tech-stack__icon-container:hover .tech-stack__icon-tool {
   transform: scale(0.8);
   filter: drop-shadow(0 0 2em rebeccapurple) blur(3px);
 }
