--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   z-index: 100;
 }
 
-.nav-header {
+.header__nav {
   width: 100%;
   height: 100px;
   max-width: 1000px;
@@ -18,18 +18,19 @@
   box-sizing: border-box;
 }
 
-.nav-header p {
+.header__nav p {
   font-size: 1.5rem;
 }
 
-.nav-header ul {
+.header__nav ul {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
+  align-items: center;
 }
 
-.nav-header a {
+.header__nav a {
   display: inline-block;
   color: white;
   margin: 0 16px;
@@ -38,12 +39,27 @@
   cursor: pointer;
 }
 
-.nav-header a:hover {
+.header__nav a:hover {
   transform: scale(1.3);
   filter: drop-shadow(0 0 0.4em white);
   color: deepskyblue;
 }
 
-.nav-header a:active {
+.header__nav a:active {
   color: blueviolet;
+}
+
+.header__icon {
+  width: 30px;
+  height: 30px;
+  filter: invert(100%);
+}
+
+/*https://codepen.io/sosuke/pen/Pjoqqp*/
+.header__nav a:hover .header__icon {
+  filter: invert(64%) sepia(41%) saturate(5252%) hue-rotate(159deg) brightness(102%) contrast(104%);
+}
+
+.header__nav a:active .header__icon {
+  filter: invert(17%) sepia(97%) saturate(7158%) hue-rotate(282deg) brightness(107%) contrast(78%);
 }
