--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -13,24 +13,84 @@
 }
 
 .projects__container {
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
+  display: flex;
+  gap: 50px;
+  align-items: center;
 }
 
-.projects__anchor-wrapper {
+.projects__carousel {
+  overflow: hidden;
+  position: relative;
+}
+
+.projects__arrow-left {
+  width: 50px;
+  height: 50px;
+  transform: scaleX(-1);
+  transition: 0.3s ease;
+  cursor: pointer;
+  user-select: none;
+}
+
+.enabled {
+  pointer-events: all;
+  filter: invert(100%);
+}
+
+.disabled {
+  pointer-events: none;
+  filter: invert(30%);
+}
+
+.projects__arrow-left:hover {
+  transform: scaleX(-1) scale(1.3);
+}
+
+.projects__arrow-left:active {
+  transition: 0.1s ease;
+  transform: scaleX(-1) scale(1);
+}
+
+.projects__arrow-right {
+  width: 48px;
+  height: 48px;
+  transition: 0.3s ease;
+  cursor: pointer;
+  user-select: none;
+}
+
+.projects__arrow-right:hover {
+  transform: scale(1.3);
+}
+
+.projects__arrow-right:active {
+  transition: 0.1s ease;
+  transform: scale(1);
+}
+
+.projects__carousel-track {
   display: flex;
-  justify-content: center;
-  margin: 40px 0 100px;
+  transition: transform 0.3s ease;
+}
+
+.projects__carousel-slide {
+  flex: 0 0 100%;
+  align-self: center;
+  padding: 100px 100px;
+  box-sizing: border-box;
 }
 
 .projects__item {
-  min-width: 400px;
+  min-height: 400px;
   border-radius: 20px;
   overflow: hidden;
   position: relative;
   color: white;
   display: flex;
   background: #242424;
+  filter: drop-shadow(0 32px 32px rgba(0, 0, 0, 1));
 }
 
 .projects__card {
@@ -40,8 +100,7 @@
 }
 
 .projects__image {
-  max-height: 100%;
-  max-width: 100%;
+  width: 100%;
   transition: 0.3s ease;
 }
 
