Add arrow in footer for scrolling to top of page

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,24 @@
 .footer {
-  margin: 100px auto;
+  margin: 40px auto;
   width: 100%;
+}
+
+.footer__arrow {
+  display: inline-block;
+  color: white;
+  margin: 40px auto;
+  transition: transform 0.3s ease, filter 0.3s;
+  cursor: pointer;
+}
+
+.footer__arrow p {
+  transform: scale(0);
+  margin: 0 auto;
+  transition: transform 0.3s ease;
+}
+
+.footer__arrow:hover p {
+  transform: scale(1);
 }
 
 .footer ul {
@@ -13,7 +31,7 @@
   margin: 0 auto;
 }
 
-.footer__links a {
+.footer li a {
   display: inline-block;
   color: white;
   margin: 0 16px;
@@ -27,17 +45,22 @@
   filter: invert(100%);
 }
 
-.footer__links a:hover {
+.footer a:hover {
   transform: scale(1.3);
   filter: drop-shadow(0 0 0.4em white);
+  color: deepskyblue;
+}
+
+.footer a:active p {
+  color: blueviolet;
 }
 
 /*https://codepen.io/sosuke/pen/Pjoqqp*/
-.footer__links a:hover .footer__icon {
+.footer a:hover .footer__icon {
   filter: invert(64%) sepia(41%) saturate(5252%) hue-rotate(159deg) brightness(102%) contrast(104%);
 }
 
-.footer__links a:active .footer__icon {
+.footer a:active .footer__icon {
   filter: invert(17%) sepia(97%) saturate(7158%) hue-rotate(282deg) brightness(107%) contrast(78%);
 }
 
